[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.32.1"
litesvm = "0.7.0"
whirlpool-optimization = { path = "../programs/whirlpool", package = "whirlpool" }
solana-instruction = "2.1.0"
solana-message = "2.2.1"
solana-keypair = "2.2.3"
solana-signer = "2.2.1"
solana-sdk = "2.2.1"
solana-pubkey = "2.4.0" 
solana-program = "2.1.0"
spl-associated-token-account-client = "2.0.0"
spl-associated-token-account = "6.0.0"
spl-token = "8.0.0"
spl-token-2022 = "9.0.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10.9"
serde_json = "1.0.143"
base64 = "0.22.1"