[package]
name = "orca_whirlpools_docs"
version = "0.2.8"
publish = false
edition = "2021"

[dependencies]
orca_whirlpools_core = { path = "../../rust-sdk/core", features = ["floats"] }
orca_whirlpools_client = { path = "../../rust-sdk/client", features = [
    "core-types",
] }
orca_whirlpools = { path = "../../rust-sdk/whirlpool" }
orca_tx_sender = { path = "../../rust-sdk/tx-sender" }
