[package]
name = "whirlpool"
version = "0.6.1"
publish = false
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []
mainnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.1" }
anchor-spl = { version = "=0.31.1", features = ["metadata", "memo"] }
spl-transfer-hook-interface ={ version = "=0.9.0" }
solana-program = { version = "=2.1.0" }
uint = { version = "=0.9.5", default-features = false }
arrayref = { version = "=0.3.9" }
solana-security-txt = { version = "=1.1.1" }
bytemuck = { version = "=1.22.0", features = ["derive", "min_const_generics"] }
num_enum = { version = "=0.7.4" }
bitflags = { version = "=2.6.0" }

[dev-dependencies]
proptest = "=1.5.0"
serde = "=1.0.213"
serde_json = "=1.0.132"

[dev-dependencies.serde_with]
version = "=2.3.3"
features = ["json"]
