[package]
name = "whirlpool"
version = "0.8.0"
publish = false
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["whirlpool-entrypoint"]
whirlpool-entrypoint = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
devnet = []
mainnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
pinocchio = { version = "=0.9.2" }
pinocchio-pubkey = { version = "=0.3.0" }
pinocchio-token = { version = "=0.4.0" }
pinocchio-token-2022 = { version = "=0.1.0" }
anchor-lang = { version = "=0.32.1" }
anchor-spl = { version = "=0.32.1", features = ["metadata", "memo"] }
spl-transfer-hook-interface ={ version = "=0.9.0" }
solana-program = { version = "=2.2.1" }
uint = { version = "=0.9.5", default-features = false }
arrayref = { version = "=0.3.9" }
solana-security-txt = { version = "=1.1.1" }
bytemuck = { version = "=1.22.0", features = ["derive", "min_const_generics"] }
num_enum = { version = "=0.7.4" }
bitflags = { version = "=2.8.0" }

[dev-dependencies]
proptest = "=1.5.0"
serde = "=1.0.228"
serde_json = "=1.0.138"

[dev-dependencies.serde_with]
version = "=2.3.3"
features = ["json"]
