[package]
name = "whirlpool"
version = "0.9.0"
publish = false
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["whirlpool-entrypoint"]
whirlpool-entrypoint = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
devnet = []
mainnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
pinocchio = { version = "=0.9.2" }
pinocchio-pubkey = { version = "=0.3.0" }
pinocchio-log = { version = "=0.5.1" }
anchor-lang = { version = "=1.0.0" }
anchor-spl = { version = "=1.0.0", features = ["metadata", "memo"] }
spl-transfer-hook-interface ={ version = "=2.1.0" }
solana-program = { version = "^3" }
uint = { version = "=0.9.5", default-features = false }
arrayref = { version = "=0.3.9" }
solana-security-txt = { version = "=1.1.1" }
bytemuck = { version = "=1.25.0", features = ["derive", "min_const_generics"] }
num_enum = { version = "=0.7.4" }
bitflags = { version = "=2.8.0" }
borsh = { version = "=1.5.7" }
arrayvec = { version = "=0.7.6" }

[dev-dependencies]
proptest = "=1.5.0"
serde = "=1.0.228"
serde_json = "=1.0.149"

[dev-dependencies.serde_with]
version = "=2.3.3"
features = ["json"]

[lints.rust.unexpected_cfgs]
level = "warn"
# These are cfg values emitted by Anchor/Solana proc macros on newer Rust toolchains.
# We mark them as expected for check-cfg so they stop warning, without adding them as
# real crate features that could change Cargo feature resolution or compilation behavior.
check-cfg = [
    'cfg(feature, values("anchor-debug", "no-log-ix-name"))',
    'cfg(target_os, values("solana"))',
]
