[package]
name = "orca_whirlpools_client"
version = "5.0.1"
description = "Rust client to interact with Orca's on-chain Whirlpool program."
include = ["src/*"]
documentation = "https://dev.orca.so/"
homepage = "https://orca.so"
repository = "https://github.com/orca-so/whirlpools"
license-file = "../../LICENSE"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
authors = ["team@orca.so"]
edition = "2021"

[features]
default = ["core-types"]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["dep:anchor-lang", "anchor-lang/idl-build"]
core-types = ["dep:orca_whirlpools_core"]
serde = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
fetch = ["dep:solana-client", "dep:solana-sdk", "dep:solana-account-decoder"]
solana-v1 = []

[dependencies]
anchor-lang = { version = ">=0.31", optional = true }
borsh = { version = "^0.10" }
num-derive = { version = "^0.4" }
num-traits = { version = "^0.2" }
orca_whirlpools_core = { path = "../core", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.10", optional = true }
serde-big-array = { version = "^0.5", optional = true }
solana-pubkey = { version = "^2" }
solana-instruction = { version = "^2" }
solana-account = { version = "^2" }
solana-account-info = { version = "^2" }
solana-program-error = { version = "^2" }
solana-cpi = { version = "^2" }
solana-program = { version = "^2" }
solana-sdk = { version = "^2", optional = true }
solana-client = { version = "^2", optional = true }
solana-account-decoder = { version = "^2", optional = true }
thiserror = { version = "^2.0" }
