[package]
name = "orca_whirlpools_core"
version = "0.1.0"
description = "Orca's core rust package."
documentation = "https://orca-so.github.io/whirlpools/"
homepage = "https://orca.so"
repository = "https://github.com/orca-so/whirlpools"
license = "Apache-2.0"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
edition = "2021"

[features]
default = ["floats"]
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-big-array", "dep:serde-wasm-bindgen", "dep:js-sys", "dep:tsify"]
floats = ["dep:libm"]

[dependencies]
ethnum = { version = "^1" }
libm = { version = "^0", optional = true }
orca_whirlpools_macros = { path = "../macros" }
wasm-bindgen = { version = "^0", optional = true }
serde = { version = "^1", features = ["derive"], optional = true }
serde-big-array = { version = "^0", optional = true }
serde-wasm-bindgen = { version = "^0", optional = true }
js-sys = { version = "^0", optional = true }
tsify = { version = "^0", features = ["js"], optional = true }

[dev-dependencies]
approx = { version = "^0" }
