[package]
name = "orca_whirlpools_macros"
version = "0.1.0"
description = "Orca's rust wasm macros package."
documentation = "https://orca-so.github.io/whirlpools/"
homepage = "https://orca.so"
repository = "https://github.com/orca-so/whirlpools"
license = "Apache-2.0"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2", features = ["full"] }
quote = { version = "^1" }
proc-macro2 = { version = "^1" }
