[package]
name = "orca_tx_sender"
version = "2.0.0"
description = "Solana Transaction Sender for building and sending transactions with priority fees"
include = ["src/*"]
documentation = "https://dev.orca.so/"
homepage = "https://orca.so"
repository = "https://github.com/orca-so/whirlpools"
license-file = "../../LICENSE"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
authors = ["team@orca.so"]
edition = "2021"

[dependencies]
solana-program = { version = ">=1.16, <3.0" }
solana-sdk = { version = ">=1.16, <3.0" }
solana-client = { version = ">=1.16, <3.0" }
solana-account-decoder = { version = ">=1.16, <3.0" }
solana-rpc-client-api = { version = ">=1.16, <3.0" }
reqwest = { version = "0.11.27", features = ["json", "stream"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "^1.0" }

[dev-dependencies]
solana-cli-config = { version = ">=1.16, <3.0" }

[[example]]
name = "priority_only_test"
path = "examples/priority_only_test.rs"
test = false

[[example]]
name = "with_jito_test"
path = "examples/with_jito_test.rs"
test = false

