[package]
name = "orca_tx_sender"
version = "2.1.0"
description = "Solana Transaction Sender for building and sending transactions with priority fees"
include = ["src/*"]
documentation = "https://dev.orca.so/"
homepage = "https://orca.so"
repository = "https://github.com/orca-so/whirlpools"
license-file = "../../LICENSE"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
authors = ["team@orca.so"]
edition = "2021"

[dependencies]
solana-program = { version = ">=1.17, <=3" }
solana-client = { version = ">=1.17, <=3" }
solana-account-decoder = { version = ">=1.17, <=3" }
solana-rpc-client-api = { version = ">=1.17, <=3" }
solana-message = { version = ">=1.17, <=3" }
solana-transaction = { version = ">=1.17, <=3" }
solana-instruction = { version = ">=1.17, <=3" }
solana-signature = { version = ">=1.17, <=3" }
solana-program-pack = { version = ">=1.17, <=3" }
solana-keypair = { version = ">=1.17, <=3" }
solana-commitment-config = { version = ">=1.17, <=3" }
solana-address-lookup-table-interface = { version = ">=1.17, <=3" }
solana-compute-budget-interface = { version = ">=1.17, <=3" }
solana-rpc-client = { version = ">=1.17, <=3" }
solana-pubkey = { version = ">=1.17, <=3" }
solana-hash = { version = ">=1.17, <=3" }
solana-signer = { version = ">=1.17, <=3" }
solana-system-interface = "^2"
reqwest = { version = "0.11.27", features = ["json", "stream"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "^1.0" }

[dev-dependencies]
solana-cli-config = { version = ">=1.17, <=3" }

[[example]]
name = "priority_only_test"
path = "examples/priority_only_test.rs"
test = false

[[example]]
name = "with_jito_test"
path = "examples/with_jito_test.rs"
test = false

