[package]
name = "whirlpool_repositioning_bot"
version = "0.2.3"
edition = "2021"

[dependencies]
clap = { version = "^4.5.21", features = ["derive"] }
colored = { version = "^2.0" }

# We are using the local versions of the Whirlpools SDKs. However, when you move
# this example to a new repository, you can use the latest versions of the SDKs by 
# uncommenting the following lines:
# 
# orca_whirlpools = { version = "^2.0" }
# orca_whirlpools_client = { version = "^2.0" }
# orca_whirlpools_core = { version = "^2.0" }
#
# And removing the following lines:
orca_whirlpools = { path = '../../../rust-sdk/whirlpool' }
orca_whirlpools_client = { path = '../../../rust-sdk/client' }
orca_whirlpools_core = { path = '../../../rust-sdk/core' }

serde_json = { version = "^1.0" }
solana-client = { version = "^3" }
solana-pubkey = "^3"
solana-keypair = "^3"
solana-signer = "^3"
solana-signature = "^3"
solana-instruction = "^3"
solana-transaction = "^3"
solana-program-pack = "^3"
solana-message = "^3"
solana-commitment-config = "^3"
solana-hash = "^3"
spl-token-2022-interface = "^2.0"
solana-compute-budget-interface = "^3"
spl-associated-token-account-interface = "^2.0"
tokio = { version = "^1.43.1" }
tokio-retry = { version = "^0.3.0" }
dotenv = { version = "^0.15.0" }
