[package]
name = "orca_whirlpools_client_integration_solana_v1_16"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
solana-program = { version = "~1.16.27" }
solana-sdk = { version = "~1.16.27" }
solana-client = { version = "~1.16.27" }
solana-account-decoder = { version = "~1.16.27" }
orca_whirlpools_client = { path = "../../../client" }
