[package]
name = "orca_whirlpools_integration_solana_v1_17"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
solana-account-decoder = { version = "~1.17.3" }
solana-sdk = { version = "~1.17.3" }
spl-associated-token-account = { version = "~2.3.0" }
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }
spl-memo = { version = "~3.0.1", features = ["no-entrypoint"] }
spl-token-2022 = { version = "~1.0.0", features = ["no-entrypoint"] }
solana-program = { version = "~1.17.3" }
orca_whirlpools = { path = "../../../whirlpool", features = ["solana-v1"] }
