[package]
name = "orca_whirlpools_integration_solana_v1_18"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
solana-program = { version = "~1.18" }
solana-sdk = { version = "~1.18" }
solana-client = { version = "~1.18" }
solana-account-decoder = { version = "~1.18" }
orca_whirlpools = { path = "../../../whirlpool" }
