[package]
name = "orca_whirlpools_integration_solana_v1_18"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
solana-program = { version = "~1.18.26" }
solana-sdk = { version = "~1.18.26" }
solana-client = { version = "~1.18.26" }
solana-account-decoder = { version = "~1.18.26" }
orca_whirlpools = { path = "../../../whirlpool" }
