[package]
name = "orca_whirlpools_integration_solana_v1_18"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
solana-account-decoder = { version = "~1.18.26" }
solana-sdk = { version = "~1.18.26" }
spl-associated-token-account = { version = "~3.0.4" }
spl-token = { version = "~4.0.0" }
spl-memo = { version = "~4.0.4" }
spl-token-2022 = { version = "~3.0.5" }
solana-program = { version = "~1.18.26" }
orca_whirlpools = { path = "../../../whirlpool", features = ["solana-v1"] }
