[package]
name = "orca_whirlpools_integration_solana_v2_0"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
solana-account-decoder = { version = "~2.0.25" }
solana-sdk = { version = "~2.0.25" }
spl-associated-token-account = { version = "~4.0.0" }
spl-token = { version = "~6.0.0", features = ["no-entrypoint"] }
spl-memo = { version = "~5.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "~4.0.0" }
solana-program = { version = "~2.0.25" }
orca_whirlpools = { path = "../../../whirlpool" }
