[package]
name = "orca_whirlpools_integration_solana_v2_1"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
solana-account-decoder = { version = "~2.1.13" }
solana-sdk = { version = "~2.1.13" }
spl-associated-token-account = { version = "~5.0.1" }
spl-token = { version = "~6.0.0", features = ["no-entrypoint"] }
spl-memo = { version = "~6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "~6.0.0", features = ["no-entrypoint"] }
solana-program = { version = "~2.1.13" }
orca_whirlpools = { path = "../../../whirlpool" }
