[package]
name = "orca_whirlpools_integration_solana_v3_0"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
solana-account-decoder = { version = "~3.0.0" }
solana-sdk = { version = "~3.0.0" }
spl-associated-token-account = { version = "~6.0.0" }
spl-token = { version = "~7.0.0", features = ["no-entrypoint"] }
spl-memo = { version = "~6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "~7.0.0", features = ["no-entrypoint"] }
solana-program = { version = "~3.0.0" }
orca_whirlpools = { path = "../../../whirlpool" }
